--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>io.github.zul</groupId>
     <artifactId>spring-smart-specification</artifactId>
-    <version>2.0.0</version>
+    <version>3.0.0</version>
 
     <name>spring-smart-specification</name>
     <description>Projections and Specifications to JPA and Mongo</description>
@@ -22,7 +22,7 @@
 
     <properties>
         <java.version>11</java.version>
-        <spring.boot.version>2.7.9</spring.boot.version>
+        <spring.boot.version>3.0.0</spring.boot.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
@@ -42,8 +42,8 @@
         </dependency>
         <dependency>
             <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
-            <version>3.5.3</version>
+            <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
+            <version>4.6.1</version>
             <scope>test</scope>
         </dependency>
 
