--- a/src/main/resources/application-mongo.yml
+++ b/src/main/resources/application-mongo.yml
@@ -3,6 +3,9 @@ spring:
         mongodb:
             auto-index-creation: true
             port: 0
-    mongodb:
-        embedded:
-            version: '3.4.0'
+
+de:
+    flapdoodle:
+        mongodb:
+            embedded:
+                version: 4.0.2
